# SDLFramework

./: .gitignore  CMakeLists.txt  README.md
src/example/: CMakeLists.txt  main.cpp
src/sdlf/: CMakeLists.txt  SDLF.hpp  Screen.hpp  Window.cpp  Window.hpp
src/sdlf/maths/: Vector2.hpp
src/sdlf/util/: Callback.hpp  Vector2.hpp  util.hpp
